@@ -7,7 +7,7 @@ Terminal=false
 Type=Application
 Icon=gnome-dictionary.png
 StartupNotify=true
-Categories=GNOME;Application;Utility;
+Categories=GNOME;GTK;Application;Utility;
 X-GNOME-DocPath=gnome-dictionary/gnome-dictionary.xml
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-utils
