@@ -7,7 +7,7 @@ Terminal=false
 Type=Application
 Icon=applets-screenshooter
 StartupNotify=true
-Categories=GNOME;Application;Utility;
+Categories=GTK;GNOME;Application;Utility;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-utils
 X-GNOME-Bugzilla-Component=screenshot
