@@ -7,7 +7,7 @@ Icon=logviewer
 Terminal=false
 Type=Application
 StartupNotify=true
-Categories=GNOME;Application;System;Monitor;X-Red-Hat-Base
+Categories=GTK;GNOME;Application;System;Monitor;X-Red-Hat-Base
 X-GNOME-DocPath=gnome-system-log/gnome-system-log.xml
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-utils
