@@ -1,3 +1,10 @@
+2006-01-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* gnome-dictionary/data/gnome-dictionary.desktop.in:
+	* gnome-screenshot/gnome-screenshot.desktop.in:
+	* logview/gnome-system-log.desktop.in:
+	* gfloppy/gfloppy.desktop.in: Add the GTK category.
+
 2006-01-17  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* HACKING: review layout, and add a notice for libgdict.
